--- a/AoC 2022/AoC 2022/AoC 2022.csproj
+++ b/AoC 2022/AoC 2022/AoC 2022.csproj
@@ -12,6 +12,9 @@
     <None Update="Inputs\day01input.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Inputs\day02input.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
